[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/GUI/Gameplay/Crystals/crystal_info.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/GUI/Gameplay/Crystals/crystals_panel.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -736.0
margin_bottom = -454.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GreenCrystal" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 171.0
margin_bottom = 226.0
rect_pivot_offset = Vector2( 517.027, 77.0991 )

[node name="RedCrystal" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -85.5
margin_right = 85.5
margin_bottom = 226.0
rect_pivot_offset = Vector2( 249.027, 226 )

[node name="BlueCrystal" parent="." instance=ExtResource( 1 )]
anchor_left = 1.0
anchor_bottom = 0.0
margin_left = -177.0
margin_right = 0.0
margin_bottom = 226.0
rect_pivot_offset = Vector2( 249.027, 226 )

[node name="WhiteCrystal" parent="." instance=ExtResource( 1 )]
anchor_top = 1.0
anchor_right = 0.0
margin_top = -226.0
margin_right = 177.0
margin_bottom = 0.0
rect_pivot_offset = Vector2( 249.027, 226 )

[node name="GoldCrystal" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
margin_left = -88.5
margin_top = -226.0
margin_right = 88.5
margin_bottom = 0.0
rect_pivot_offset = Vector2( 249.027, 226 )

[node name="BlackCrystal" parent="." instance=ExtResource( 1 )]
anchor_left = 1.0
anchor_top = 1.0
margin_left = -177.0
margin_top = -226.0
margin_right = 0.0
margin_bottom = 0.0
rect_pivot_offset = Vector2( 249.027, 226 )
